--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -1,20 +1,55 @@
 .aboutus{
-  width: 1300px;
+  width: 100%;
   height: 700px;
-  left: 30px;
-  top: 100px;
+  margin-right: 100px;
+  margin-top: 5px;
   background: url(mountain2.jpg);
-  background-size: 65% 50%;
+  background-size: 100% 45%;
   background-repeat: no-repeat;
-  margin-left: 30px;
 }
 
 .fortext{
-font-family: Open Sans;
+font-family: "Open Sans";
 font-style: normal;
 font-weight: 300;
-font-size: 70px;
+font-size: 50px;
 line-height: 72px;
-text-align: center;
-color: #FFFFFF;
+margin-left: 400px;
+color: #fff;
+}
+
+.contactus{
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  overflow: hidden;
+  border: 2px solid white;
+  color: rgb(219, 212, 212);
+  padding: 5px;
+  font-family: "DIN";
+  font-style: bold;
+  margin-left: 400px;
+  margin-bottom: 100px;
+}
+
+.contactus:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.readfaq{
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  overflow: hidden;
+  border: 2px solid white;
+  color: rgb(219, 212, 212);
+  padding: 5px;
+  font-family: "DIN";
+  font-style: bold;
+  margin-left: 40px;
+  margin-bottom: 100px;
+}
+
+.readfaq:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
