--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,12 +1,11 @@
 .firstcontainer{
-  width: 1300px;
+  width: 100%;
   height: 700px;
-  left: 30px;
-  top: 100px;
+  margin-right: 100px;
+  margin-top: 5px;
   background: url(both-ood-iceland-houses.jpg);
-  background-size: 65% 60%;
+  background-size: 100% 45%;
   background-repeat: no-repeat;
-  margin-left: 30px;
 }
 
 .firsth1{
