--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -22,7 +22,7 @@
 }
 
 .fortext{
-font-family: "Open Sans";
+font-family: 'Roboto', sans-serif;
 font-style: normal;
 font-weight: 300;
 font-size: 50px;
@@ -39,7 +39,7 @@ color: #fff;
   border: 2px solid white;
   color: rgba(255, 254, 254, 0.89);
   padding: 5px;
-  font-family: "DIN";
+  font-family: 'Roboto', sans-serif;
   font-style: bold;
   margin-left: 400px;
   margin-bottom: 100px;
@@ -57,7 +57,7 @@ color: #fff;
   border: 2px solid white;
   color: rgba(255, 254, 254, 0.89);
   padding: 5px;
-  font-family: "DIN";
+  font-family: 'Roboto', sans-serif;
   font-style: bold;
   margin-left: 40px;
   margin-bottom: 100px;
@@ -76,7 +76,7 @@ color: #fff;
   font-style: italic;
   font-weight: normal;
   font-size: 24px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   line-height: 36px;
   color: #5B6460;
 }
@@ -93,7 +93,7 @@ color: #fff;
   width: 410px;
   left: 490px;
   top: 610px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 13px;
@@ -116,8 +116,8 @@ color: #fff;
   width: 537px;
   height: 112px;
   left: 300px;
-  top: 780px;
-  font-family: "Open Sans";
+  top: 820px;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 23px;
@@ -164,7 +164,7 @@ color: #fff;
   position: absolute;
   left:10px;
   top: 5px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   font-style: italic;
   font-weight: normal;
   font-size: 15px;
@@ -185,7 +185,7 @@ color: #fff;
   position: absolute;
   left: 20px;
   top: 1350px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -197,7 +197,7 @@ color: #fff;
   position: absolute;
   left: 50px;
   top: 1450px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
@@ -211,7 +211,7 @@ color: #fff;
   height: 30px;
   left: 50px;
   top: 1500px;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
@@ -351,7 +351,7 @@ color: #fff;
   height: 48px;
   left: 370px;
   top: 1800px;
-  font-family: "Handlee";
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -381,7 +381,7 @@ footer{
   height: 24px;
   left: 560px;
   top: 20px;
-  font-family: "DIN";
+  font-family: 'Roboto', sans-serif;
   font-style: sans-serif;
   font-weight: 300;
   font-size: 14px;
@@ -396,7 +396,7 @@ footer{
   height: 24px;
   left: 660px;
   top: 20px;
-  font-family: "DIN";
+  font-family: 'Roboto', sans-serif;
   font-style: sans-serif;
   font-weight: 300;
   font-size: 14px;
@@ -411,7 +411,7 @@ footer{
   height: 24px;
   left: 840px;
   top: 20px;
-  font-family: "DIN";
+  font-family: 'Roboto', sans-serif;
   font-style: sans-serif;
   font-weight: 300;
   font-size: 14px;
@@ -449,5 +449,4 @@ footer{
   left: 70px;
   top: 230px;
   color: white;
-
 }
