--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 .firstcontainer{
-  width: 110%;
+  width: 100%;
   height: 700px;
+  margin-right: 100px;
+  margin-top: 5px;
   background: url(both-ood-iceland-houses.jpg);
   background-size: 100% 45%;
   background-repeat: no-repeat;
 }
 
 .firsth1{
+  margin-left: 530px;
   color: aliceblue;
   text-align: center;
   font-family: 'Roboto', sans-serif;
@@ -17,7 +20,7 @@
 
 .firstp{
   position: absolute;
-  left: 40%;
+  left: 50%;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -46,6 +49,8 @@
 }
 
 em {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
   font-size: 10px;
 }
 
@@ -87,16 +92,16 @@ color: #000000;
 
 .po3p{
   position: absolute;
-width: 693px;
-height: 438px;
-left: 70px;
-top: 700px;
-text-decoration: underline;
-color: gray;
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
+  width: 693px;
+  height: 438px;
+  left: 70px;
+  top: 700px;
+  text-decoration: underline;
+  color: gray;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .house3{
@@ -153,5 +158,95 @@ color: gray;
 .section2{
   position: absolute;
   left: 130px;
-  top: 0px;
+  top: -30px;
+}
+
+.facilities{
+  position: absolute;
+width: 618px;
+height: 540px;
+left: 163px;
+top: 1440px;
+background: #5B6460;
+}
+
+.fac{
+  position: absolute;
+  left: 210px;
+  top: 50px;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.fridge{
+  position: absolute;
+  left: 130px;
+  top: 180px;
+}
+
+.kitchen{
+  position: absolute;
+  left: 235px;
+  top: 180px;
+}
+
+.minif{
+  position: absolute;
+  left: 120px;
+  top: 220px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: #E9ECE0;
+  font-size: 12px;
+  font-style: normal;
+}
+
+.kitchene{
+  position: absolute;
+  left: 230px;
+  top: 220px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: #E9ECE0;
+  font-size: 12px;
+  font-style: normal;
+}
+
+.pcoffee{
+  position: absolute;
+  left: 330px;
+  top: 220px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: #E9ECE0;
+  font-size: 12px;
+  font-style: normal;
+}
+
+.coffee{
+  position: absolute;
+  left: 340px;
+  top: 180px;
+}
+
+.cup{
+  position: absolute;
+  left: 470px;
+  top: 185px;
+}
+
+.electrictea{
+  position: absolute;
+  left: 450px;
+  top: 220px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: #E9ECE0;
+  font-size: 12px;
+  font-style: normal;
 }
