--- a/src/pages/TheHut/TheHut.module.css
+++ b/src/pages/TheHut/TheHut.module.css
@@ -10,15 +10,13 @@
 } */
 
   .overlay12 {
-  width: 1000px;
-  height: 316px;
   background-color: black;
   opacity: 0.7;
   position: absolute;
   z-index: -1.1;
-  top: 87.9px;
+  top: 0px;
   bottom: 0;
-  left: 8.5px;
+  left: 0px;
   right: 0;
 }
 
@@ -29,14 +27,16 @@
   font-size: 50px;
   line-height: 72px;
   margin-left: 400px;
-  color: rgb(7, 7, 7);
+  color: #FFF;
 }
 
 .thehut1 {
+  position: relative;
   width: 1000px;
-  height: 316px;
-  margin-right: 50px;
-  margin-top: 3px;
+  height: 1300px;
+  margin-right: 0px;
+  top: 0px;
+  background-size: 100% 1300px;
   background-repeat: no-repeat;
-  background: url("https://i.pinimg.com/originals/b8/ff/59/b8ff59f93b8b250b6ac07f99938a0200.jpg");
+  background: url(https://i.pinimg.com/originals/b8/ff/59/b8ff59f93b8b250b6ac07f99938a0200.jpg);
 }
