--- a/src/pages/TheHut/TheHut.module.css
+++ b/src/pages/TheHut/TheHut.module.css
@@ -41,3 +41,5 @@
   background-repeat: no-repeat;
   background: url(https://i.pinimg.com/originals/b8/ff/59/b8ff59f93b8b250b6ac07f99938a0200.jpg);
 }
+
+/* ho-ho-ho */
