--- a/src/pages/TheHut/TheHut.module.css
+++ b/src/pages/TheHut/TheHut.module.css
@@ -1,15 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
+body {
+  margin: 0;
+}
 
-/* .imgthehut {
-  width: 1000px;
-  height: 316px;
-  margin-right: 50px;
-  margin-top: 3px;
-  background-repeat: no-repeat;
-} */
-
-  .overlay12 {
+.overlay12 {
   background-color: black;
   opacity: 0.7;
   position: absolute;
@@ -20,26 +15,24 @@
   right: 0;
 }
 
-  .thehuth1 {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 50px;
-    line-height: 72px;
-    margin-left: 400px;
-    color: #fff;
-
+.thehuth1 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 50px;
+  line-height: 200px;
+  /* text-align: center; */
+  margin-left: 400px;
+  color: #fff;
 }
 
 .thehut1 {
   position: relative;
-  width: 1000px;
-  height: 1300px;
-  margin-right: 0;
-  top: 0;
-  background-size: 100% 1300px;
+  width: 100%;
+  background-size: cover;
+  height: 300px;
+  margin-right: 0px;
+  top: 0px;
   background-repeat: no-repeat;
   background: url(https://i.pinimg.com/originals/b8/ff/59/b8ff59f93b8b250b6ac07f99938a0200.jpg);
 }
-
-/* ho-ho-ho */
