--- a/src/pages/TheHut/TheHut.module.css
+++ b/src/pages/TheHut/TheHut.module.css
@@ -21,16 +21,20 @@ body {
   font-weight: 300;
   font-size: 50px;
   line-height: 200px;
-  /* text-align: center; */
   margin-left: 400px;
   color: #fff;
 }
 
 .thehut1 {
   position: relative;
-  width: 100%;
+   width: 100%;
   background-size: cover;
-  height: 300px;
+  height: 100%;
+  /* background-position: 0px 85px; */
+  /* -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%; */
+  background-size: 100% 100%;
   margin-right: 0px;
   top: 0px;
   background-repeat: no-repeat;
